kdecoration: Make "Detect window properties" button work on Wayland

Use kwin's dbus api to query window info both on x11 and wayland.

In order to make dbus interaction code nicer, this change gets rid of
the nested dialog. With the proposed changes, you will have to select
window class or window title in the exception type combobox, click
"detect window properties" button, click a window and the kcm will fill
in "regular expression to match" text field.

BUG: 399763